Fix MID-8498 overflow in autocomplete menu

--- a/gui/admin-gui/src/frontend/scss/wicket.scss
+++ b/gui/admin-gui/src/frontend/scss/wicket.scss
@@ -56,6 +56,7 @@ div.wicket-aa-container {
     padding: $input-padding-y $input-padding-x;
     margin: 1px;
     text-align: left;
+    display: inline-block;
 
     ul {
       list-style: none;
